--- a/template/home.html
+++ b/template/home.html
@@ -10,25 +10,68 @@
     <h1 class="text-center text-white" style="font-family: Impact, fantasy; margin-top: 20px;">FAÇA SUA BUSCA <img src="{{url_for('static', filename='img/logo.png')}}" title="ChatGPT"  style="width: 50px;"></h1>
     <br>
     <div class="container-sm">
-        <form action="/home" method="post">
+        <form action="/" method="post">
             <div class="input-group mb-3">
                 <input type="text" name="busca" style="text-transform: uppercase;" class="form-control" placeholder="Escreva sua pergunta" aria-label="Escreva sua pergunta" aria-describedby="button-addon2">
-                <button class="btn btn-success" type="submit" id="button-addon2">Pesquisar</button>
+                <button class="btn btn-success" type="submit" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="button-addon2">Pesquisar</button>
               </div>
-            
-                        
+
+
         </form>
         <br>
-        
+
         <div class="row">
             <div class="form-floating">
                 <textarea class="form-control text-white" readonly cols="30" rows="10"  id="floatingTextarea2" style="height: 430px; background-color: #1a6285;">{{texto}}</textarea>
                 <label for="floatingTextarea2" class="text-white" style="text-transform: uppercase;"><strong>{{busca}}</strong></label>
               </div>
-           
+
         </div>
 
     </div>
+
+    <!-- Static Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Estamos realizando sua busca...</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <div class="spinner-grow text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-secondary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-danger" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-warning" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-info" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-warning" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-dark" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="row">
+          <h4 class="col-auto">Aguarde enquanto realizamos sua busca</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" ></script>
   </body>
